// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/badge/Badge should render a badge with highlight styling when initialized 1`] = `
<span
  className="badge badge-highlight"
>
  test
</span>
`;

exports[`components/badge/Badge should render a badge with info styling when initialized 1`] = `
<span
  className="badge badge-info"
>
  test
</span>
`;

exports[`components/badge/Badge should render a badge with warning styling when initialized 1`] = `
<span
  className="badge badge-warning"
>
  test
</span>
`;
